Apply OpenRewrite cleanup to ZoteroCitationMarkParserTest
Replace list.get(0) with list.getFirst() per SequencedCollection recipe.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>